Modify code and models of gvnfm vnfres
Issue-Id: GVNFM-12
